--- a/src/lib/mixer/MultirotorMixer/geometries/custom_platform.toml
+++ b/src/lib/mixer/MultirotorMixer/geometries/custom_platform.toml
@@ -1,4 +1,4 @@
-# The custom platform (N = 4) - LIS
+# The custom platfrom (N = 4) - LIS
 
 [info]
 key = "Nc"
@@ -6,27 +6,35 @@ description = "The custom platform (N = 4) - LIS"
 
 [rotor_default]
 axis      = [0.0, 0.0, -1.0]
-Ct        = 1.0
-Cm        = 0.05
 
 
 
 [[rotors]]
-name      = "rotor_0"
-position  = [0.13, 0.22, 0.0]
-direction = "CCW"
+name      = "motor_0"
+position  = [0.18, 0.18, 0.0]
+direction = "ccw"
+Ct        = 0.092
+Cm        = 0.00796
 
 [[rotors]]
-name      = "rotor_1"
-position  = [-0.13, -0.2, 0.0]
-direction = "CCW"
+name      = "motor_1"
+position  = [-0.18, -0.18, 0.0]
+direction = "ccw"
+Ct        = 0.092
+Cm        = 0.00796
 
 [[rotors]]
-name     = "rotor_2"
-position = [0.13, -0.22, 0.0]
-direction = "CW"
+name      = "motor_2"
+position  = [0.18, -0.18, 0.0]
+direction = "cw"
+Ct        = 0.092
+Cm        = 0.00796
 
 [[rotors]]
-name     = "rotor_3"
-position = [-0.13, 0.2, 0.0]
-direction = "CW"
+name      = "motor_3"
+position  = [-0.18, 0.18, 0.0]
+direction = "cw"
+Ct        = 0.092
+Cm        = 0.00796
+
+
