Rebases on v1.11.2 and reintegrates custom platform

--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -152,4 +152,7 @@ px4_add_romfs_files(
 	# [60000, 61000] (Unmanned) Underwater Robots
 	60000_uuv_generic
 	60001_uuv_hippocampus
+
+	# [>=100000] Custom platform
+	100000_custom_platform
 )
